--- a/portfolio.css
+++ b/portfolio.css
@@ -32,13 +32,13 @@ nav ul li{
     display: inline-block;
     list-style: none;
     margin: 10px 20px;
-    color: #fff;
+    color: #ff004f;
 }
 nav ul li a{
     text-decoration: none;
     font-size: 18px;
     position: relative;
-    color: #fff;
+    color: #ff004f;
 
 }
 nav ul li a::after{
@@ -68,7 +68,7 @@ nav ul li a i{
 .header-text h1{
     margin-top: 10%;
     font-size: 45px;
-    color:#fff;
+    color:#ff004f;
 }
 .header-text h3{
     margin-top: 3%;
@@ -113,7 +113,7 @@ nav ul li{
 nav p{
     padding: 4% 0;
     font-size: 18px;
-    color: #fff;
+    color:#ff004f;
 }
 /*--------skill-----*/
 #skill{
