--- a/portfolio.css
+++ b/portfolio.css
@@ -114,6 +114,7 @@ nav p{
     padding: 4% 0;
     font-size: 18px;
     color:#ff004f;
+    text-align: justify;
 }
 /*--------skill-----*/
 #skill{
